@@ -1,3 +1,4 @@
+122. Add FIO_RESIZE posterIoctl command, for resizing an existing poster.
 121. Reconnect regression test to the build after automake switch.
 120. Fix built-in posterServ path by using the right automake bindir variable
 
